Mon Jan 21 02:51:02 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: produce Error for
	  UnknownEncodingError.  Current Java runtime must know UTF-8
	  encoding.

Mon Jan 21 01:58:57 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: reorder member
	  decl.

Mon Jan 21 01:39:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: modify preproc tag.

Mon Jan 21 01:24:22 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: change symbol name to fix
	  compile error.

Mon Jan 21 01:22:05 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: rename rule:
	  defvars -> defvar.

	* net/loveruby/cflat/parser/Parser.jj: refactoring: extract new
	  symbol defvar_list from block.

Mon Jan 21 01:19:10 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Declarations.java: refactoring: new
	  method #addDefvars.

	* net/loveruby/cflat/parser/Parser.jj: use it.

Mon Jan 21 00:42:50 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ast/Parameter.java: simplify dump output.

Sat Jan 19 07:22:29 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: refactoring: rename lvar.

Tue Jan 15 02:34:00 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: should generate special
	  token for block comment, instead of just skipping.

Tue Jan 15 02:31:14 2008  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: LOOKAHEAD is useless here.

Tue Jan 15 01:04:55 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: read user defined property file from $HOME.

Tue Jan 15 00:51:41 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml: now default task is "jar" instead of "compile".

Tue Jan 15 00:48:47 2008  Minero Aoki  <aamine@loveruby.net>

	* build.xml (recompile): build jar file.
